--- a/templates/error.html
+++ b/templates/error.html
@@ -4,14 +4,15 @@
 
 {% block content %}
 <div class="row justify-content-center">
-    <div class="col-md-8">
+    <div class="col-md-6">
         <div class="card">
-            <div class="card-header">
-                <h4 class="mb-0"><i class="fas fa-exclamation-triangle"></i> Error</h4>
+            <div class="card-header bg-danger text-white">
+                <h5 class="mb-0"><i class="fas fa-exclamation-triangle"></i> Error</h5>
             </div>
             <div class="card-body text-center">
-                <h5 class="card-title">Oops! Something went wrong</h5>
-                <p class="card-text">We're sorry, but there was an error connecting to the database. Please try again later.</p>
+                <i class="fas fa-exclamation-circle fa-3x text-danger mb-3"></i>
+                <h4>Oops! Something went wrong.</h4>
+                <p class="text-muted">We're sorry, but there was an error processing your request.</p>
                 <a href="{{ url_for('index') }}" class="btn btn-primary">
                     <i class="fas fa-home"></i> Return to Home
                 </a>
